--- a/src/main/res/layout/fragment_quick__log__update_.xml
+++ b/src/main/res/layout/fragment_quick__log__update_.xml
@@ -372,7 +372,7 @@
 
 
                 <Button
-                    android:id="@+id/btn_Quick_Log_Post"
+                    android:id="@+id/btn_Quick_Log_Update"
                     style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
