--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -1,26 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimary2">#244ED8</color>
+    <color name="ptrax_black1">#000000</color>
+    <color name="colorPrimary">#FFFF5722</color>
+    <color name="colorPrimary2">#FFFF5722</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorPrimaryDark2">#081D70</color>
+    <color name="colorPrimaryDark2">#FFFF5722</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorAccent2">#673AB7</color>
-    <color name="colorBackground">#3e79d3</color>
+    <color name="colorBackground">#FFFF5722</color>
     <color name="grey_100">#F5F5F5</color>
     <color name="grey_300">#E0E0E0</color>
-    <color name="grey_500">#9E9E9E</color>
+    <color name="grey_500">#B44420</color>
 
+    <color name="ptrax_orange_1">#FFB44420</color>
+    <color name="ptrax_orange_2">#FFFF5722</color>
+    <color name="ptrax_orange_3">#FFF44336</color>
+    <color name="ptrax_orange_4">#FFCF2013</color>
 
     <color name="toolbarIconColor">#FDF6D6</color>
 
     <color name="loginPageBackgroundColor">#FFFFFF</color>
 
-    <color name="productGridBackgroundColor">#FFFFFF</color>
+    <color name="productGridBackgroundColor">#000000</color>
 
-    <color name="colorSplashBackground">#3e79d3</color>
+    <color name="colorSplashBackground">#FFFF5722</color>
 
-    <color name="textColorPrimary">#442C2E</color>
+    <color name="textColorPrimary">#000000</color>
 
     <color name="textInputOutlineColor">#FBB8AC</color>
 </resources>
