--- a/src/main/res/layout/fragment_quick__log__update_.xml
+++ b/src/main/res/layout/fragment_quick__log__update_.xml
@@ -11,12 +11,12 @@
         android:background="@drawable/background_selector_gradient"
         android:fitsSystemWindows="true"
         android:orientation="vertical"
-        tools:context=".Fragments.Quick_Log_Fragment">
+        tools:context=".Fragments.Quick_Log_Update_Fragment">
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:context=".Fragments.Quick_Log_Fragment">
+            tools:context=".Fragments.Quick_Log_Update_Fragment">
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
