--- a/src/main/res/layout/full_logbook_list_item.xml
+++ b/src/main/res/layout/full_logbook_list_item.xml
@@ -32,13 +32,13 @@
             <LinearLayout
                 android:id="@+id/list_root"
                 android:layout_width="match_parent"
-                android:layout_height="157dp"
+                android:layout_height="175dp"
                 android:background="@drawable/background_selector_gradient"
                 android:clickable="true"
                 android:focusable="true"
                 android:foreground="?android:attr/selectableItemBackground"
                 android:orientation="vertical"
-                android:padding="10dp">
+                android:padding="5dp">
 
                 <TableLayout
                     android:layout_width="match_parent"
@@ -56,7 +56,6 @@
                             android:layout_width="150dp"
                             android:layout_height="wrap_content"
                             android:layout_column="1"
-
                             android:text="Brief"
                             android:textAllCaps="true"
                             android:textAppearance="?attr/textAppearanceSubtitle2"
@@ -87,6 +86,7 @@
                             android:layout_width="150dp"
                             android:layout_height="wrap_content"
                             android:layout_column="1"
+                            android:maxLength="20"
                             android:text="First Name"
                             android:textAllCaps="true"
                             android:textAppearance="?attr/textAppearanceSubtitle2"
@@ -111,18 +111,38 @@
                     <TableRow
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
-
                         <TextView
-                            android:id="@+id/lname"
-                            android:layout_width="wrap_content"
+                            android:id="@+id/txt_age"
+                            android:layout_width="150dp"
                             android:layout_height="wrap_content"
                             android:layout_column="1"
-                            android:text="Last Name"
-                            android:textAllCaps="true"
+                            android:text="ageNWeight"
                             android:textAppearance="?attr/textAppearanceSubtitle2"
                             android:textColor="@android:color/black"
-                            android:textSize="14sp"
-                            android:textStyle="normal" />
+                            android:textSize="10sp"
+                            android:textStyle="normal"
+                            />
+
+<!--                        <TextView-->
+<!--                            android:id="@+id/lname"-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:layout_column="1"-->
+<!--                            android:maxLength="20"-->
+<!--                            android:text="Last Name"-->
+<!--                            android:textAllCaps="true"-->
+<!--                            android:textAppearance="?attr/textAppearanceSubtitle2"-->
+<!--                            android:textColor="@android:color/black"-->
+<!--                            android:textSize="14sp"-->
+<!--                            android:textStyle="normal" />-->
+
+                        <TextView
+                            android:id="@+id/txt_filler_3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_column="2" />
+
+
                     </TableRow>
 
                     <TableRow
@@ -134,12 +154,19 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_column="1"
+                            android:maxLength="20"
                             android:text="Email"
                             android:textAllCaps="true"
                             android:textAppearance="?attr/textAppearanceSubtitle2"
                             android:textColor="@android:color/black"
                             android:textSize="14sp"
                             android:textStyle="normal" />
+
+                        <TextView
+                            android:id="@+id/txt_filler_4"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_column="2" />
                     </TableRow>
 
                     <TableRow
@@ -151,6 +178,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_column="1"
+                            android:maxLength="20"
                             android:text="Phone"
                             android:textAllCaps="true"
                             android:textAppearance="?attr/textAppearanceSubtitle2"
@@ -158,35 +186,56 @@
                             android:textSize="14sp"
                             android:textStyle="normal" />
 
-                        <LinearLayout
-                            android:layout_width="150dp"
+                        <TextView
+                            android:id="@+id/txt_filler"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="end"
-                            android:layout_weight="5"
-                            android:alpha="1"
-                            android:gravity="end"
-                            android:orientation="horizontal">
-
-                            <com.google.android.material.radiobutton.MaterialRadioButton
-                                android:id="@+id/btn_Delete"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="end"
-                                android:padding="2dp"
-                                android:text="Delete"
-                                android:textSize="10sp" />
-
-                            <com.google.android.material.radiobutton.MaterialRadioButton
-                                android:id="@+id/btn_Edit"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:padding="2dp"
-                                android:text="Edit"
-                                android:textSize="10sp" />
-                        </LinearLayout>
+                            android:layout_column="2" />
 
                     </TableRow>
+
+<!--                    <TableRow-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="match_parent">-->
+
+<!--                     -->
+
+<!--                        <TextView-->
+<!--                            android:id="@+id/txt_filler_2"-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:layout_column="2" />-->
+
+
+<!--                    </TableRow>-->
                 </TableLayout>
+
+                <LinearLayout
+                    android:layout_width="150dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="end"
+                    android:layout_weight="5"
+                    android:alpha="1"
+                    android:gravity="end"
+                    android:orientation="horizontal">
+
+                    <com.google.android.gms.common.internal.SignInButtonImpl
+                        android:id="@+id/btn_Delete"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end"
+                        android:padding="2dp"
+                        android:text="Delete"
+                        android:textSize="10sp" />
+
+                    <com.google.android.gms.common.internal.SignInButtonImpl
+                        android:id="@+id/btn_Edit"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="2dp"
+                        android:text="Edit"
+                        android:textSize="10sp" />
+                </LinearLayout>
 
 
             </LinearLayout>
@@ -207,6 +256,20 @@
         android:elevation="20dp"
         android:fadingEdgeLength="5dp"
         app:srcCompat="@drawable/thzepczr8y" />
+
+    <TextView
+        android:id="@+id/txt_days"
+        android:layout_width="80dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="80sp"
+        android:layout_marginTop="2dp"
+        android:background="#7AF2F2F7"
+        android:contentDescription="date"
+        android:elevation="20dp"
+        android:fadingEdgeLength="5dp"
+        android:text="1 day ago"
+        android:textFontWeight="5"
+        android:textSize="10sp" />
 </FrameLayout>
 
 
